[package]
name = "system-dynamics-engine"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
lazy_static = "1"
regex = "1"
unicode-xid = "0.2"
lalrpop-util = { git = "https://github.com/bpowers/lalrpop", version = "0.19.4", rev = "322bdffcd65afc49fef3eb0731f38d213b7c8480" }
prost = "0.7"
float-cmp = "0.8"
ordered-float = "2"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
lalrpop = { git = "https://github.com/bpowers/lalrpop", version = "0.19.4", rev = "322bdffcd65afc49fef3eb0731f38d213b7c8480" }
prost-build = "0.7"
