[package]
name = "xmutil"
version = "1.1.0"
description = "convert Vensim MDL files to XMILE"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
homepage = "https://github.com/bpowers/xmutil-rs"
repository = "https://github.com/bpowers/xmutil-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1"

[build-dependencies]
cc = "1"
